# finanzas-personales

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/finanzas_app/: main.py
src/finanzas_app/data/: auth.py  backup.py  db.py  repository.py  validation.py
src/finanzas_app/models/: schema.py
src/finanzas_app/reports/: charts.py  pdf_export.py
src/finanzas_app/services/: budget.py  categorization.py  trends.py
src/finanzas_app/views/: login.py  theme.py
tests/: conftest.py  test_auth.py  test_backup.py  test_data_layer.py  test_services_layer.py  test_validation.py
