[project]
name = "finanzas-app"
version = "0.1.0"
description = "Sistema personal de presupuesto, gastos y seguimiento de inversiones"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "reportlab>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finanzas_app"]
