[project]
name = "finanzas-app"
version = "1.0.0"
description = "Sistema personal de presupuesto, gastos y seguimiento de inversiones"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finanzas_app"]

# ── Configuración de flet build ──────────────────────────────────────────────
[tool.flet]
app_name        = "nexus-budget"
product         = "Nexus Budget"
description     = "Sistema personal de presupuesto y seguimiento de inversiones"
version         = "1.0.0"
company         = "brandgpt2001-ops"
copyright       = "Copyright © 2026 brandgpt2001-ops"
org             = "com.brandgpt2001ops"

[tool.flet.app]
path = "src"

[tool.flet.windows]
# El ícono se lee desde src/assets/icon.png automáticamente.
# El ejecutable final queda en build/windows/nexus-budget.exe
